---
source: tests/e2e.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env)"
fnm install 'lts/*'
fnm ls | grep lts-latest
fnm use 'lts/*'
